Adding manually python, flask, and werkzeug to requirements.txt

--- a/fly.toml
+++ b/fly.toml
@@ -14,10 +14,10 @@ processes = []
   MYSQL_DATABASE="Mailerdb"
   MYSQL_USER="Sqluser"
   FLASK_APP="app"
-  FLASK_DATABASE_USER=MYSQL_USER
-  FLASK_DATABASE_PASSWORD=MYSQL_PASSWORD
-  FLASK_DATABASE=MYSQL_DATABASE
-  FLASK_DATABASE_HOST=MYSQL_HOST
+  FLASK_DATABASE_USER="${MYSQL_USER}"
+  FLASK_DATABASE_PASSWORD="${MYSQL_PASSWORD}"
+  FLASK_DATABASE="${MYSQL_DATABASE}"
+  FLASK_DATABASE_HOST="${MYSQL_HOST}"
 
 
 [experimental]
