--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+Python==3.10.4
 gunicorn==20.1.0
 mysql-connector-python==8.0.30
 protobuf==3.20.1
@@ -5,3 +6,5 @@ python-dotenv==0.20.0
 python-http-client==3.3.7
 sendgrid==6.9.7
 starkbank-ecdsa==2.0.3
+Flask==2.1.3
+Werkzeug==2.1.2
