--- a/fly.toml
+++ b/fly.toml
@@ -1,13 +1,12 @@
-# fly.toml file generated for mailerapp-python on 2022-08-30T00:31:42-05:00
+# fly.toml file generated for mailerapp-python on 2022-08-30T12:25:32-05:00
 
 app = "mailerapp-python"
 kill_signal = "SIGINT"
 kill_timeout = 5
 processes = []
 
-[mounts]
-  destination = "/data"
-  source = "mysqldata"
+[build]
+  builder = "paketobuildpacks/builder:base"
 
 [env]
   FLASK_APP = "app"
@@ -18,16 +17,10 @@ processes = []
   MYSQL_DATABASE = "Mailerdb"
   MYSQL_HOST = "MailerHost"
   MYSQL_USER = "Sqluser"
-  PORT = "8080"
-
-[build]
- builder = "paketobuildpacks/builder:base"
 
 [experimental]
-  cmd = [
-    "--default-authentication-plugin", 
-    "mysql_native_password", 
-    "--datadir", 
-    "/data/mysql"
-  ]
+  cmd = ["--default-authentication-plugin", "mysql_native_password", "--datadir", "/data/mysql"]
 
+[mounts]
+  destination = "/data"
+  source = "mysqldata"
